--- a/TalentShow/app/src/main/res/drawable/email_activity_edittext_background.xml
+++ b/TalentShow/app/src/main/res/drawable/email_activity_edittext_background.xml
@@ -5,6 +5,6 @@
     android:viewportHeight="45">
   <path
       android:pathData="M8,0L337,0A8,8 0,0 1,345 8L345,37A8,8 0,0 1,337 45L8,45A8,8 0,0 1,0 37L0,8A8,8 0,0 1,8 0z"
-      android:fillColor="#ffffff"
+      android:fillColor="#f2f2f2"
       android:fillAlpha="0.35"/>
 </vector>
