--- a/TalentShow/app/src/main/res/layout/activity_producer_name.xml
+++ b/TalentShow/app/src/main/res/layout/activity_producer_name.xml
@@ -15,7 +15,7 @@
 
         android:gravity="center_horizontal|top"
         android:lineSpacingExtra="0sp"
-        android:text="@string/heading"
+        android:text="Ваше имя"
         android:textAppearance="@style/heading"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -31,7 +31,7 @@
         android:layout_marginBottom="452dp"
         android:gravity="center_horizontal|top"
         android:lineSpacingExtra="3sp"
-        android:text="@string/text"
+        android:text="@string/text_1"
         android:textAppearance="@style/text"
         android:translationY="-1.45sp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -43,9 +43,9 @@
         android:id="@+id/label"
         android:layout_width="232dp"
         android:layout_height="44dp"
-        android:background="@drawable/background"
+        android:background="@drawable/background_edittext"
         android:gravity="center"
-        android:hint="@string/label"
+        android:hint="Введите имя"
         android:lineSpacingExtra="1sp"
         android:textAppearance="@style/label"
         android:translationY="-0.26sp"
@@ -55,7 +55,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/activity_producer_name_btn"
         android:layout_width="345dp"
         android:layout_height="44dp"
         android:background="@drawable/activity_producer_name_button_bg"
