--- a/TalentShow/app/src/main/res/values/styles.xml
+++ b/TalentShow/app/src/main/res/values/styles.xml
@@ -8,4 +8,36 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="heading">
+
+        <item name="android:textSize">36sp</item>
+        <item name="android:letterSpacing">-0.01</item>
+        <item name="android:textColor">#060606</item>
+
+    </style>
+
+    <style name="text">
+
+        <item name="android:textSize">16sp</item>
+        <item name="android:letterSpacing">-0.03</item>
+        <item name="android:textColor">#060606</item>
+
+    </style>
+
+    <style name="label">
+
+        <item name="android:textSize">18sp</item>
+        <item name="android:letterSpacing">-0.02</item>
+        <item name="android:textColor">#C4CACC</item>
+
+    </style>
+
+    <style name="ActivityProducerNameButtonText">
+
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#FFFFFF</item>
+
+    </style>
+
+
 </resources>
