--- a/TalentShow/app/src/main/res/layout/activity_producer_name.xml
+++ b/TalentShow/app/src/main/res/layout/activity_producer_name.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/heading"
+        android:id="@+id/activity_producer_name_heading"
         android:layout_width="167dp"
         android:layout_height="40dp"
 
@@ -15,19 +15,19 @@
 
         android:gravity="center_horizontal|top"
         android:lineSpacingExtra="0sp"
-        android:text="Ваше имя"
+        android:text="@string/activity_producer_name_heading"
         android:textAppearance="@style/heading"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
 
     <TextView
-        android:id="@+id/text"
+        android:id="@+id/activity_producer_name_tv"
         android:layout_width="0dp"
         android:layout_height="44dp"
-        android:layout_marginLeft="31dp"
+        android:layout_marginStart="31dp"
         android:layout_marginTop="171dp"
-        android:layout_marginRight="30dp"
+        android:layout_marginEnd="30dp"
         android:layout_marginBottom="452dp"
         android:gravity="center_horizontal|top"
         android:lineSpacingExtra="3sp"
@@ -40,16 +40,17 @@
 
 
     <EditText
-        android:id="@+id/label"
+        android:id="@+id/activity_producer_name_label"
         android:layout_width="232dp"
         android:layout_height="44dp"
         android:background="@drawable/background_edittext"
         android:gravity="center"
-        android:hint="Введите имя"
+        android:hint="@string/activity_producer_name_label"
         android:lineSpacingExtra="1sp"
         android:textAppearance="@style/label"
         android:translationY="-0.26sp"
         android:layout_marginTop="273dp"
+        android:inputType="text"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -60,7 +61,7 @@
         android:layout_height="44dp"
         android:background="@drawable/activity_producer_name_button_bg"
         android:layout_marginBottom="59dp"
-        android:text="Далее"
+        android:text="@string/activity_producer_name_btn"
         android:textAppearance="@style/ActivityProducerNameButtonText"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
