--- a/TalentShow/app/src/main/res/layout/activity_casting.xml
+++ b/TalentShow/app/src/main/res/layout/activity_casting.xml
@@ -17,8 +17,10 @@
         android:textAppearance="@style/activity_casting_heading"
         android:lineSpacingExtra="0sp"
         android:gravity="top"
+        android:layout_marginBottom="567dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         />
 
     <TextView
@@ -32,8 +34,10 @@
         android:gravity="top"
         android:layout_marginStart="15dp"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="539dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/activity_casting_head"
+        app:layout_constraintBottom_toBottomOf="parent"
         />
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -42,25 +46,29 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="22dp"
         android:layout_marginTop="149dp"
+        android:layout_marginBottom="164dp"
         android:background="@drawable/activity_casting_block"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         >
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <life.knowledge4.videotrimmer.K4LVideoTrimmer
+    <VideoView
         android:layout_width="337dp"
         android:layout_height="248dp"
         android:id="@+id/activity_casting_video"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="22dp"
         android:layout_marginTop="21dp"
+        android:layout_marginBottom="270dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/activity_casting_tv"
+
+        app:layout_constraintBottom_toBottomOf="parent"
         />
 
     <TextView
@@ -75,9 +83,11 @@
         android:layout_marginTop="400dp"
         android:layout_marginStart="88dp"
         android:layout_marginEnd="95dp"
+        android:layout_marginBottom="247dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         />
 
     <TextView
@@ -89,9 +99,11 @@
         android:layout_marginTop="437dp"
         android:layout_marginStart="25dp"
         android:layout_marginEnd="266dp"
+        android:layout_marginBottom="202dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         />
 
     <Button
@@ -102,9 +114,11 @@
         android:layout_marginTop="531dp"
         android:layout_marginStart="77dp"
         android:layout_marginEnd="239dp"
+        android:layout_marginBottom="77dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         />
 
     <Button
@@ -115,9 +129,11 @@
         android:layout_marginTop="531dp"
         android:layout_marginStart="232dp"
         android:layout_marginEnd="84dp"
+        android:layout_marginBottom="77dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         />
 
 
