--- a/TalentShow/app/src/main/res/layout/activity_casting.xml
+++ b/TalentShow/app/src/main/res/layout/activity_casting.xml
@@ -64,11 +64,11 @@
         android:id="@+id/activity_casting_video"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="22dp"
-        android:layout_marginTop="21dp"
+        android:layout_marginTop="149dp"
         android:layout_marginBottom="270dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         />
 
