--- a/TalentShow/app/src/main/res/values/styles.xml
+++ b/TalentShow/app/src/main/res/values/styles.xml
@@ -99,5 +99,36 @@
 
     </style>
 
+    <style name="activity_star_video_best_heading">
+
+        <item name="android:textSize">
+            36sp
+        </item>
+
+        <item name="android:letterSpacing">
+            -0.01
+        </item>
+
+        <item name="android:textColor">
+            #060606
+        </item>
+
+    </style>
+
+    <style name="activity_star_video_best_step">
+        <item name="android:textSize">
+            13sp
+        </item>
+
+        <item name="android:letterSpacing">
+            -0.02
+        </item>
+
+        <item name="android:textColor">
+            #000000
+        </item>
+
+    </style>
+
 
 </resources>
