Mail activities connected to server

--- a/TalentShow/app/src/main/res/layout/activity_email_success_code.xml
+++ b/TalentShow/app/src/main/res/layout/activity_email_success_code.xml
@@ -4,6 +4,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
 
+    <ProgressBar
+        android:id="@+id/activity_email_success_progressbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@android:style/Widget.ProgressBar.Inverse"
+        android:visibility="invisible"
+        android:layout_marginTop="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <TextView
         android:id="@+id/activity_email_success_text1"
         android:layout_width="0dp"
