--- a/TalentShow/app/src/main/res/layout/activity_star_video_best.xml
+++ b/TalentShow/app/src/main/res/layout/activity_star_video_best.xml
@@ -43,7 +43,7 @@
 
 
     <VideoView
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="296dp"
         android:id="@+id/activity_star_video_best_video"
         android:layout_marginTop="232dp"
