--- a/TalentShow/app/src/main/res/layout/activity_casting.xml
+++ b/TalentShow/app/src/main/res/layout/activity_casting.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#E5E5E5"
+    android:id="@+id/activity_casting_layout"
     tools:context=".presentation.CastingActivity">
+
 
     <TextView
         android:layout_width="139dp"
@@ -58,19 +60,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    <VideoView
-        android:layout_width="337dp"
-        android:layout_height="248dp"
-        android:id="@+id/activity_casting_video"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="22dp"
-        android:layout_marginTop="149dp"
-        android:layout_marginBottom="270dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        />
+
 
     <TextView
         android:layout_width="222dp"
@@ -137,7 +127,16 @@
         app:layout_constraintBottom_toBottomOf="parent"
         />
 
-
+    <VideoView
+        android:id="@+id/activity_casting_video"
+        android:layout_width="337dp"
+        android:layout_height="248dp"
+        android:layout_marginTop="149dp"
+        android:layout_marginBottom="270dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
