--- a/TalentShow/app/src/main/res/layout/activity_casting.xml
+++ b/TalentShow/app/src/main/res/layout/activity_casting.xml
@@ -138,5 +138,13 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/casting_activity_menu"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:menu="@menu/producer_menu"
+        />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
