--- a/TalentShow/app/src/main/res/layout/activity_casting.xml
+++ b/TalentShow/app/src/main/res/layout/activity_casting.xml
@@ -97,11 +97,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         />
 
-    <Button
+    <ImageButton
         android:layout_width="59dp"
         android:layout_height="59dp"
         android:id="@+id/activity_casting_btn_x"
-        android:background="@drawable/activity_casting_x"
+        android:src="@drawable/casting_activity_btn_dislike"
         android:layout_marginTop="531dp"
         android:layout_marginStart="77dp"
         android:layout_marginEnd="239dp"
@@ -112,11 +112,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         />
 
-    <Button
+    <ImageButton
         android:layout_width="59dp"
         android:layout_height="59dp"
         android:id="@+id/activity_casting_btn_like"
-        android:background="@drawable/activity_casting_x"
+        android:src="@drawable/casting_activity_btn_like"
         android:layout_marginTop="531dp"
         android:layout_marginStart="232dp"
         android:layout_marginEnd="84dp"
