--- a/TalentShow/app/src/main/res/layout/activity_casting.xml
+++ b/TalentShow/app/src/main/res/layout/activity_casting.xml
@@ -101,7 +101,7 @@
         android:layout_width="59dp"
         android:layout_height="59dp"
         android:id="@+id/activity_casting_btn_x"
-        android:src="@drawable/casting_activity_btn_dislike"
+        android:background="@drawable/casting_activity_btn_dislike"
         android:layout_marginTop="531dp"
         android:layout_marginStart="77dp"
         android:layout_marginEnd="239dp"
@@ -116,7 +116,7 @@
         android:layout_width="59dp"
         android:layout_height="59dp"
         android:id="@+id/activity_casting_btn_like"
-        android:src="@drawable/casting_activity_btn_like"
+        android:background="@drawable/casting_activity_btn_like"
         android:layout_marginTop="531dp"
         android:layout_marginStart="232dp"
         android:layout_marginEnd="84dp"
