--- a/TalentShow/app/src/main/res/layout/star_rating_recycler.xml
+++ b/TalentShow/app/src/main/res/layout/star_rating_recycler.xml
@@ -3,9 +3,9 @@
     android:id="@+id/star_rating_recycler"
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginStart="15dp"
-    android:layout_marginEnd="15dp"
-    android:layout_marginBottom="5dp"
+    android:paddingStart="15dp"
+    android:paddingEnd="15dp"
+    android:paddingBottom="5dp"
     android:background="@color/darkBackground">
 
 </androidx.recyclerview.widget.RecyclerView>
