--- a/TalentShow/app/src/main/res/layout/activity_casting.xml
+++ b/TalentShow/app/src/main/res/layout/activity_casting.xml
@@ -10,102 +10,131 @@
 
 
     <TextView
-        android:layout_width="139dp"
+        android:id="@+id/activity_casting_head"
+        android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="60dp"
-        android:text="@string/activity_casting_head"
-        android:id="@+id/activity_casting_head"
-        android:textAppearance="@style/activity_casting_heading"
+        android:layout_marginTop="96dp"
+
+        android:layout_marginBottom="688dp"
+        android:gravity="top"
         android:lineSpacingExtra="0sp"
-        android:gravity="top"
-        android:layout_marginBottom="567dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:text="@string/activity_casting_head"
+        android:textAppearance="@style/activity_casting_heading"
         app:layout_constraintBottom_toBottomOf="parent"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:layout_width="334dp"
-        android:layout_height="18dp"
-        android:id="@+id/activity_casting_tv"
-        android:text="@string/activity_casting_tv"
-        android:textAppearance="@style/activity_casting_long_sample"
-        android:lineSpacingExtra="1sp"
-        android:translationY="-0.65sp"
-        android:gravity="top"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="539dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/activity_casting_head"
-        app:layout_constraintBottom_toBottomOf="parent"
-        />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="337dp"
-        android:layout_height="354dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="22dp"
-        android:layout_marginTop="149dp"
-        android:layout_marginBottom="164dp"
-        android:background="@drawable/activity_casting_block"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        >
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-
-    <TextView
-        android:layout_width="222dp"
-        android:layout_height="20dp"
-        android:id="@+id/activity_casting_tv1"
-        android:text="@string/activity_casting_tv1"
-        android:textAppearance="@style/activity_casting_tv1_text"
-        android:lineSpacingExtra="3sp"
-        android:translationY="-1.65sp"
-        android:gravity="center_horizontal|top"
-        android:layout_marginTop="400dp"
-        android:layout_marginStart="88dp"
-        android:layout_marginEnd="95dp"
-        android:layout_marginBottom="247dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
+    <ImageView
+        android:layout_width="28dp"
         android:layout_height="28dp"
-        android:text="@string/activity_casting_name"
-        android:id="@+id/activity_casting_name"
-        android:textAppearance="@style/activity_casting_name"
-        android:layout_marginTop="437dp"
-        android:layout_marginStart="25dp"
-        android:layout_marginEnd="266dp"
-        android:layout_marginBottom="202dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+
+        android:layout_marginTop="96dp"
+        android:layout_marginEnd="17dp"
+        android:layout_marginBottom="688dp"
+        android:src="@drawable/activity_casting_btn_add_bg"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        app:layout_constraintTop_toTopOf="parent"
         />
+
+    <ImageView
+        android:layout_width="18dp"
+        android:layout_height="18dp"
+
+        android:layout_marginTop="96dp"
+        android:layout_marginEnd="22dp"
+        android:layout_marginBottom="688dp"
+        android:src="@drawable/activity_casting_btn_add_icon"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/activity_casting_card"
+        android:layout_width="0dp"
+        android:layout_height="398dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="226dp"
+        android:layout_marginEnd="17dp"
+        android:layout_marginBottom="188dp"
+        app:cardCornerRadius="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <VideoView
+            android:id="@+id/activity_casting_video"
+            android:layout_width="match_parent"
+            android:layout_height="207dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginEnd="0dp" />
+
+        <ImageView
+            android:id="@+id/casting_activity_avatar"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="224dp"
+            android:layout_marginEnd="293dp"
+            android:layout_marginBottom="144dp"
+            android:src="@drawable/casting_activity_ava"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/activity_casting_name"
+            android:layout_width="wrap_content"
+            android:layout_height="28dp"
+            android:layout_marginStart="66dp"
+            android:layout_marginTop="226dp"
+            android:layout_marginEnd="57dp"
+            android:layout_marginBottom="144dp"
+            android:gravity="center_vertical"
+            android:lineSpacingExtra="1sp"
+            android:text="@string/activity_casting_name"
+            android:textAppearance="@style/activity_casting_name"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:layout_width="303dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="272dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="45dp"
+            android:gravity="top"
+            android:lineSpacingExtra="2sp"
+            android:text="Это описание к видео, которое написал автор, чтобы было понятно, что он хочет сказать своим творчеством. Наверное, тут очень ограничен обхем текста."
+            android:textAppearance="@style/activity_casting_video_description"
+            android:translationY="-1.05sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.cardview.widget.CardView>
+
 
     <ImageButton
-        android:layout_width="59dp"
-        android:layout_height="59dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:id="@+id/activity_casting_btn_x"
         android:background="@drawable/casting_activity_btn_dislike"
-        android:layout_marginTop="531dp"
-        android:layout_marginStart="77dp"
-        android:layout_marginEnd="239dp"
-        android:layout_marginBottom="77dp"
+        android:layout_marginTop="599dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginEnd="289dp"
+        android:layout_marginBottom="163dp"
+        android:elevation="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -113,30 +142,37 @@
         />
 
     <ImageButton
-        android:layout_width="59dp"
-        android:layout_height="59dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:id="@+id/activity_casting_btn_like"
         android:background="@drawable/casting_activity_btn_like"
-        android:layout_marginTop="531dp"
-        android:layout_marginStart="232dp"
-        android:layout_marginEnd="84dp"
-        android:layout_marginBottom="77dp"
+        android:layout_marginTop="599dp"
+        android:layout_marginStart="288dp"
+        android:layout_marginEnd="37dp"
+        android:layout_marginBottom="163dp"
+        android:elevation="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         />
 
-    <VideoView
-        android:id="@+id/activity_casting_video"
-        android:layout_width="337dp"
-        android:layout_height="248dp"
-        android:layout_marginTop="149dp"
-        android:layout_marginBottom="270dp"
+    <ImageButton
+        android:layout_width="110dp"
+        android:layout_height="50dp"
+        android:id="@+id/activity_casting_btn_comment"
+        android:background="@drawable/casting_activity_btn_comment"
+        android:layout_marginTop="599dp"
+        android:layout_marginStart="46dp"
+        android:layout_marginEnd="46dp"
+        android:layout_marginBottom="163dp"
+        android:elevation="10dp"
+        android:onClick="showBottomSheetCasting"
+        app:layout_constraintStart_toEndOf="@+id/activity_casting_btn_x"
+        app:layout_constraintEnd_toStartOf="@+id/activity_casting_btn_like"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
