--- a/TalentShow/app/src/main/res/values/colors.xml
+++ b/TalentShow/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#773EF2</color>
+    <color name="colorPrimaryDark">#773EF2</color>
     <color name="colorAccent">#773EF2</color>
     <color name="darkBackground">#282828</color>
     <color name="whiteText">#FFFFFF</color>
