--- a/TalentShow/app/src/main/res/values/colors.xml
+++ b/TalentShow/app/src/main/res/values/colors.xml
@@ -15,5 +15,6 @@
     <color name="darkGrayText">#686868</color>
     <color name="medium_gray_text">#C4CACC</color>
     <color name="greyText">#ABABAB</color>
+    <color name="hintTextColor">#000000</color>
 
 </resources>
