--- a/TalentShow/app/src/main/res/values/colors.xml
+++ b/TalentShow/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="whiteText">#FFFFFF</color>
     <color name="hint_text_color">#808080</color>
     <color name="blueTextColor">#A32CCA</color>
-    <color name="activity_white_background">#E5E5E5</color>
+    <color name="whiteBackground">#FFFFFF</color>
     <color name="blackText">#060606</color>
     <color name="grayText">#808080</color>
     <color name="red_text">#EE1E23</color>
