--- a/TalentShow/app/src/main/res/layout/activity_star_statistics.xml
+++ b/TalentShow/app/src/main/res/layout/activity_star_statistics.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#101010"
-    tools:context=".presentation.star.ActivityStarStatistics">
+    tools:context=".presentation.main.ActivityStarStatistics">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="335dp"
@@ -101,18 +101,6 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-
-
-
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/statistics_activity_menu"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:menu="@menu/star_menu"
-        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
