--- a/TalentShow/app/src/main/res/layout/fragment_casting.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_casting.xml
@@ -73,7 +73,8 @@
             android:layout_width="match_parent"
             android:layout_height="207dp"
             android:layout_marginStart="0dp"
-            android:layout_marginEnd="0dp" />
+            android:layout_marginEnd="0dp"
+            android:clickable="false"/>
 
         <ImageView
             android:id="@+id/casting_activity_avatar"
