--- a/TalentShow/app/src/main/res/layout/fragment_casting.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_casting.xml
@@ -43,7 +43,7 @@
     <ImageView
         android:layout_width="18dp"
         android:layout_height="18dp"
-
+        android:id="@+id/fragment_casting_btn_add_new_video"
         android:layout_marginTop="96dp"
         android:layout_marginEnd="22dp"
         android:layout_marginBottom="688dp"
@@ -168,7 +168,6 @@
         android:layout_marginEnd="46dp"
         android:layout_marginBottom="163dp"
         android:elevation="10dp"
-        android:onClick="showBottomSheetCasting"
         app:layout_constraintStart_toEndOf="@+id/activity_casting_btn_x"
         app:layout_constraintEnd_toStartOf="@+id/activity_casting_btn_like"
         app:layout_constraintTop_toTopOf="parent"
