--- a/TalentShow/app/src/main/res/layout/fragment_casting.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_casting.xml
@@ -33,7 +33,7 @@
         android:layout_marginTop="96dp"
         android:layout_marginEnd="17dp"
         android:layout_marginBottom="688dp"
-        android:src="@drawable/activity_casting_btn_add_bg"
+        android:src="@drawable/blue_circle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
 
@@ -47,7 +47,7 @@
         android:layout_marginTop="96dp"
         android:layout_marginEnd="22dp"
         android:layout_marginBottom="688dp"
-        android:src="@drawable/activity_casting_btn_add_icon"
+        android:src="@drawable/white_cross"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
 
@@ -168,7 +168,6 @@
         android:layout_marginEnd="46dp"
         android:layout_marginBottom="163dp"
         android:elevation="10dp"
-        android:onClick="showBottomSheetCasting"
         app:layout_constraintStart_toEndOf="@+id/activity_casting_btn_x"
         app:layout_constraintEnd_toStartOf="@+id/activity_casting_btn_like"
         app:layout_constraintTop_toTopOf="parent"
