--- a/TalentShow/app/src/main/res/values/colors.xml
+++ b/TalentShow/app/src/main/res/values/colors.xml
@@ -3,13 +3,14 @@
     <color name="colorPrimary">#773EF2</color>
     <color name="colorPrimaryDark">#773EF2</color>
     <color name="colorAccent">#773EF2</color>
-    <color name="darkBackground">#282828</color>
+    <color name="darkBackground">#141516</color>
     <color name="whiteText">#FFFFFF</color>
-    <color name="hint_text_color">#808080</color>
+    <color name="whiteEditableText">#F1F1F1</color>
+    <color name="hint_text_color">#A1A1A1</color>
     <color name="blueTextColor">#007AFF</color>
     <color name="whiteBackground">#FFFFFF</color>
     <color name="blackText">#060606</color>
-    <color name="grayText">#808080</color>
+    <color name="grayText">#9EA1A3</color>
     <color name="red_text">#EE1E23</color>
     <color name="lightGrayText">#ABABAB</color>
     <color name="darkGrayText">#686868</color>
